--- a/manifest.json
+++ b/manifest.json
@@ -2,22 +2,26 @@
   "manifest_version": 2,
 
   "name": "Overcast Enhancer",
-  "description": "This extension demonstrates a browser action with kittens.",
+  "description": "Adds some small improvements to the Overcast webapp.",
   "version": "1.0",
 
   "content_scripts": [
     {
-      "matches": ["http://www.google.com/*"],
+
+      "matches": ["https://overcast.fm/podcasts/episode/*"],
       "css": ["style.css"],
-      "js": ["jquery.js", "playpage.js"]
+      "js": [
+        "jquery.js",
+        "playpage.js"
+      ]
     }
   ],
+
 
   "permissions": [
     "https://overcast.fm/"
   ],
   "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_icon": "icon.png"
   }
 }
